--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.7",
+    "firebase": "^11.8.1",
     "i": "^0.3.7",
+    "lottie-react": "^2.4.1",
     "npm": "^11.4.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
