--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "firebase": "^11.8.1",
     "i": "^0.3.7",
     "lottie-react": "^2.4.1",
+    "motion": "^12.12.2",
     "npm": "^11.4.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
